[project]
name = "langgraph-yt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "google-generativeai>=0.8.5",
    "ipykernel>=6.30.0",
    "langchain>=0.3.27",
    "langchain-google-genai>=2.0.10",
    "langgraph>=0.6.3",
    "openai>=1.98.0",
    "python-dotenv>=1.1.1",
]
